--- a/test/rails5.0/Gemfile
+++ b/test/rails5.0/Gemfile
@@ -12,8 +12,8 @@ group :development, :test do
   gem "capybara_minitest_spec"
 end
 
-# gem "cells", ">= 4.1.0"
-gem "cells", path: "../../../cells"# ">= 4.1.0"
+gem "cells", ">= 4.1.6"
+# gem "cells", path: "../../../cells"# ">= 4.1.0"
 gem "cells-rails", path: "../../../cells-rails"# ">= 4.1.0"
 gem "cells-erb"
 gem "simple_form"
