--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,13 @@
 language: ruby
 rvm:
-  - 2.5.0
-  - 2.4.3
-  - 2.3
-  - 2.2
-  - 2.1
-  - 2.0.0
-  - 1.9.3
-  - jruby-19mode
+  - 2.5.1
+  - 2.4.4
+  - 2.3.7
+  - 2.2.10
 env:
   - "RAILS_VERSION=4.2"
   - "RAILS_VERSION=5.0"
+  - "RAILS_VERSION=5.1"
 matrix:
   fast_finish: true
   exclude:
