--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 sudo: false
 language: ruby
+before_install:
+  - gem update --system
+  - gem install bundler
+
 rvm:
   - 2.5.1
   - 2.4.4
@@ -12,6 +16,9 @@ env:
 matrix:
   fast_finish: true
   exclude:
+    - rvm: 2.5.1
+      env: "RAILS_VERSION=4.2"
     - rvm: 2.4.4
       env: "RAILS_VERSION=4.2"
 
+cache: bundler
