--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,13 @@
 language: ruby
+before_install: gem install bundler
 rvm:
-    - 2.4.7
-    - 2.5.6
-    - 2.6.4
-env:
-  - "RAILS_VERSION=5.0"
-  - "RAILS_VERSION=5.1"
-  - "RAILS_VERSION=5.2"
-  - "RAILS_VERSION=6.0"
-matrix:
-  fast_finish: true
-  exclude:
-    - rvm: 2.3.8
-      env: RAILS_VERSION=6.0
-    - rvm: 2.4.7
-      env: RAILS_VERSION=6.0
+  - 2.7
+  - 2.6
+  - 2.5
+gemfile:
+  - gemfiles/6.0.gemfile
+  - gemfiles/5.2.gemfile
+  - gemfiles/5.1.gemfile
+  - gemfiles/5.0.gemfile
 
 cache: bundler
