--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ rvm:
   - 2.6
   - 2.5
 gemfile:
+  - gemfiles/6.1.gemfile
   - gemfiles/6.0.gemfile
   - gemfiles/5.2.gemfile
   - gemfiles/5.1.gemfile
