--- a/test/dummy/Gemfile
+++ b/test/dummy/Gemfile
@@ -1,6 +1,6 @@
 source 'https://rubygems.org'
 
-gem 'rails', '~> 7.0.0'
+gem 'rails', '~> 8.0.0'
 
 gem "my_engine", path: "engines/my_engine"
 
@@ -9,7 +9,7 @@ gem "sprockets"
 
 group :development, :test do
   gem "minitest-spec-rails"
-  gem "capybara_minitest_spec"
+  gem "capybara"
 end
 
 gem "cells", ">= 4.1.6"
