--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,26 +9,35 @@ jobs:
         ruby: [2.5, 2.6, 2.7, '3.0', 3.1, 3.2, 3.3, head]
         gemfile:
           - gemfiles/8.0.gemfile
-          - gemfiles/7.0.gemfile
+          - gemfiles/7.2.gemfile
+          - gemfiles/7.1.gemfile
           - gemfiles/6.0.gemfile
           - gemfiles/5.2.gemfile
         exclude:
           - ruby: 2.5
-            gemfile: gemfiles/7.0.gemfile
+            gemfile: gemfiles/7.2.gemfile
+          - ruby: 2.5
+            gemfile: gemfiles/7.1.gemfile
           - ruby: 2.5
             gemfile: gemfiles/8.0.gemfile
           - ruby: 2.6
-            gemfile: gemfiles/7.0.gemfile
+            gemfile: gemfiles/7.2.gemfile
+          - ruby: 2.6
+            gemfile: gemfiles/7.1.gemfile
           - ruby: 2.6
             gemfile: gemfiles/8.0.gemfile
           - ruby: 2.7
-            gemfile: gemfiles/7.0.gemfile
+            gemfile: gemfiles/7.2.gemfile
+          - ruby: 2.7
+            gemfile: gemfiles/7.1.gemfile
           - ruby: 2.7
             gemfile: gemfiles/8.0.gemfile
           - ruby: 3.0
             gemfile: gemfiles/5.2.gemfile
           - ruby: 3.0
             gemfile: gemfiles/8.0.gemfile
+          - ruby: 3.0
+            gemfile: gemfiles/7.2.gemfile
           - ruby: 3.1
             gemfile: gemfiles/5.2.gemfile
           - ruby: 3.1
